vercel homepage added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "omdbapi-site",
+  "homepage": "https://omdbapi-site-wglegola.vercel.app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
