--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,8 @@
     "@typescript-eslint/indent": "off",
     "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
-    "@typescript-eslint/no-unnecessary-type-assertion": "off"
+    "@typescript-eslint/no-unnecessary-type-assertion": "off",
+    "@typescript-eslint/triple-slash-reference": "off",
+    "@typescript-eslint/no-floating-promises": "off"
   }
 }
